# scmp_kernels

./: .gitignore  .gitmodules  pyproject.toml
bench/: .gitignore  README.md  _sbatch_ablation.sh  _sbatch_mse_profile.sh  ablation.csv  ablation.py  capture_real_tensors.py  mse_profile.csv  mse_profile.py
scmp_kernels/mp/: __init__.py  auto_calibrator.py  config.py
scmp_kernels/quant/: __init__.py  fused.py  grouped.py
scmp_kernels/sc/: __init__.py  kernels.py  matmul.py
simulator/: Makefile  bundle_energy.py  find_mapping.py  gemm_cycle_accurate_sim.cpp  trace_to_bundles.py
simulator/accelergy-sc-plugin/: README.md  peripheral.py  rng_bank.py  sc_mac.estimator.yaml  sc_mac.py  selftest.py  setup.py  sobol_bank.py
simulator/timeloop_container_run/: README.md  run.py
simulator/timeloop_workspace/: arch.yaml  constraints.yaml  mapper.yaml  problem.yaml
tests/: test_sc_smoke.py
