[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scmp_kernels"
version = "0.1.0"
description = "Shared stochastic-computing kernels and mixed-precision dispatch for scmp_llm and vit_sc."
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "triton>=2.1",
    "numpy",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["scmp_kernels*"]
